--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "express": "^4.14.0",
     "socket.io": "^1.5.1",
     "ws": "^1.1.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0"
   }
 }
