--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "nock": "^9.0.2",
-    "rewire": "^2.5.2"
+    "rewire": "^2.5.2",
+    "sinon": "^1.17.6"
   }
 }
