Added less converter and autoprefixer converting flexbox lesson 11.2

--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "chai": "^3.5.0",
     "cheerio": "^0.22.0",
     "grunt": "^1.0.1",
+    "grunt-autoprefixer": "^3.0.4",
     "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-less": "^1.4.0",
     "nock": "^9.0.2",
     "rewire": "^2.5.2",
     "sinon": "^1.17.6",
